Fixed photo alignment on mobile screens

--- a/components/PhotoBox.module.scss
+++ b/components/PhotoBox.module.scss
@@ -8,6 +8,7 @@
         overflow: hidden;
         position: relative;
         align-content: center;
+        justify-content: center;
 
         & > * {
             display: flex;
